// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button Group component Should align to the right 1`] = `
<DocumentFragment>
  <div
    class="buttons is-right"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component Should be a default list of buttons 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component Should be centered 1`] = `
<DocumentFragment>
  <div
    class="buttons is-centered"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component Should concat class names in props with Bulma class name 1`] = `
<DocumentFragment>
  <div
    class="buttons super-class-1 dope-class-2"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 0
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Button Group component Should group buttons together 1`] = `
<DocumentFragment>
  <div
    class="buttons has-addons"
  >
    <button
      class="button"
      tabindex="0"
    >
      test 1
    </button>
    <button
      class="button"
      tabindex="0"
    >
      test 2
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button component Should be a Large Primary Button 1`] = `
<DocumentFragment>
  <button
    class="is-primary is-large button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should be a Primary Button 1`] = `
<DocumentFragment>
  <button
    class="is-primary button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should be a default Button 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should be a reset form button 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
    type="reset"
  />
</DocumentFragment>
`;

exports[`Button component Should be a submit form button 1`] = `
<DocumentFragment>
  <button
    class="button"
    tabindex="0"
    type="submit"
  />
</DocumentFragment>
`;

exports[`Button component Should be an anchor button 1`] = `
<DocumentFragment>
  <a
    class="button"
    href="https://github.com/couds/react-bulma-components"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should expose Button Group 1`] = `[Function]`;

exports[`Button component Should render as a React element link with to prop 1`] = `
<DocumentFragment>
  <a
    href="http://google.com"
  >
    TEST
  </a>
</DocumentFragment>
`;

exports[`Button component Should render as a html button 1`] = `
<DocumentFragment>
  <button
    class="is-danger button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should render as a static Button 1`] = `
<DocumentFragment>
  <span
    class="is-primary is-static button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Button component Should render be disabled 1`] = `
<DocumentFragment>
  <button
    class="button"
    disabled=""
    tabindex="-1"
  />
</DocumentFragment>
`;
